# scaling-adapter

./: Cargo.toml  adapter_info.yaml  kernel_has_tracesets.sh
adapter-benchmark/: .gitignore  Cargo.toml  generate_input.sh  run_benchmark.sh  single_run_with_metrics.sh
adapter-benchmark/bench_logged/: derived.py  graphs.py  main.py  parse_log.py  run_some.sh
adapter-benchmark/bench_logged-adapter_dummy/: main.py  parse_log.py  plot.py
adapter-benchmark/bench_logged-tracer/: derived.py  graphs.py  main.py  run_some.sh
adapter-benchmark/bench_overhead/: 100ms-rwbuf1mb-1k-fixed.json  100ms-rwbuf1mb-1k-overhead.json  100us-rw4kb-300k-fixed.json  100us-rw4kb-300k-overhead.json  os-read2mb-30k-fixed.json  os-read2mb-30k-overhead.json  os-rw2mb-10k-fixed.json  os-rw2mb-10k-overhead.json  os-rw4kb-300k-fixed.json  os-rw4kb-300k-overhead.json  os-rwbuf1mb-1k-fixed.json  os-rwbuf1mb-1k-overhead.json  os-rwbuf2mb-2k-fixed.json  os-rwbuf2mb-2k-overhead.json  os-rwnosync2mb-20k-fixed.json  os-rwnosync2mb-20k-overhead.json  plot.py  run.sh  run_multiple.sh
adapter-benchmark/bench_traced/: benchmarks.json  combine_results.sh  get_child_tids.sh  run_multiple_traced.sh  single_run_traced.sh
adapter-benchmark/bench_traced/results-2020-12-23/: log.txt
adapter-benchmark/benchmarking/: benchmarks.json  raw_results_to_json.py  run_benchmark_traced.py  run_multiple_traced.sh  single_run_traced.sh
adapter-benchmark/benchmarking/previous/: run_no_adapter.sh
adapter-benchmark/benchmarking/run-rw_4kb_100us-2020-11-29-22:13/: t=1-syscalls.txt  t=10-pidstats.txt  t=13-pidstats.txt  t=13-syscalls.txt  t=15-pidstats.txt  t=15-syscalls.txt  t=16-pidstats.txt  t=16-syscalls.txt  t=3-pidstats.txt  t=3-syscalls.txt  t=4-pidstats.txt  t=5-pidstats.txt  t=5-syscalls.txt  t=6-pidstats.txt  t=7-pidstats.txt  t=7-syscalls.txt  t=9-pidstats.txt
adapter-benchmark/benchmarking/run-rw_4kb_100us-bg_load-2020-12-03-10:26/: result-all-rw_4kb_100us-bg_load.json  t=1-syscalls.txt  t=10-pidstats.txt  t=12-syscalls.txt  t=13-syscalls.txt  (+13 more)
adapter-benchmark/file_generation/: 100kb.sh  1mb.sh  2mb.sh  4kb.sh
adapter-benchmark/results/: result_10k_adaptive.json  result_10k_no_adapter.json  result_10k_static.json  result_1k-fsync_adaptive.json  result_1k-fsync_dynamic.json
adapter-benchmark/src/: helpers.rs  lib.rs  main.rs
scaling-adapter/: Cargo.toml
scaling-adapter-clib/: Cargo.toml  bindings.h  build.rs  cbindgen.toml
scaling-adapter-clib/src/: lib.rs
scaling-adapter/src/: errors.rs  history.rs  intervals.rs  lib.rs  parameters.rs  statistics.rs
scaling-adapter/tests/: simple_concurrent.rs
(+1148 files in other folders)
