[package]
name = "adapter-benchmark"
version = "0.1.0"
authors = ["jannes <jannes.dev@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
scaling-adapter = { path = "../scaling-adapter" }
log = "0.4.11"
env_logger = "0.7.1"
libc = "0.2.79"
chrono = "0.4.19"
ctrlc = "3.1.7"
