[package]
name = "scaling-adapter-clib"
version = "0.1.0"
authors = ["jannes <jannes.dev@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = 'abort'

[dependencies]
scaling-adapter = { path = "../scaling-adapter" }
tracesets = { path = "../tracesets" }
lazy_static = "1.4.0"

[build-dependencies]
cbindgen = "0.14.6"
