[package]
name = "scaling-adapter-clib"
version = "0.1.0"
authors = ["jannes <jannes.dev@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = 'abort'

[dependencies]
lazy_static = "1.4.0"

[dependencies.scaling-adapter]
path = "../scaling-adapter"
features = ["c_repr"]

[build-dependencies]
cbindgen = "0.14.6"

[dev-dependencies]
serial_test = "0.5.0"
