[package]
name = "scaling-adapter"
version = "0.1.0"
authors = ["jannes <jannes.dev@posteo.net>"]
edition = "2018"
# autotests = false

[features]
default = []
c_repr = ["tracesets/c_repr"]

[dependencies]
tracesets = { path = "../tracesets" }
log = "0.4.11"

[dev-dependencies]
test-utils = { path = "../test-utils" }
env_logger = "0.7.1"
libc = "0.2.79"
chrono = "0.4.19"

# [[test]]
# name = "integration"
# path = "tests/main.rs"